# roomba-walker

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: walker.hpp
launch/: walker_launch.py
results/: cppcheck_results.txt  cpplint_results.txt
results/rosbag/: metadata.yaml  rosbag_0.db3
src/: walker_node.cpp
