<?xml version="1.0"?>
<package format="3">
  <name>roomba_walker</name>
  <version>0.0.0</version>
  <description>A ROS2 package for Roomba-like robot navigation using sensor data</description>
  <maintainer email="tarunsaireddy1998@gmail.com">tarun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
